# tdd-workshop

./: .gitignore  README.md  main.py  pyproject.toml
src/adapters/: exceptions.py  json_placeholder_adapter.py
src/domain/: exceptions.py
tests/unit/adapters/: test_json_placeholder_adapter.py
