[project]
name = "tdd-workshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.12"
dependencies = [
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "requests>=2.32.5",
    "ruff>=0.14.14",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
